WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32690
REGRESSION (
r47255
): Extra Large Amount of Empty Space
https://bugs.webkit.org/show_bug.cgi?id=32690
Summary
REGRESSION (r47255): Extra Large Amount of Empty Space
Josh
Reported
2009-12-17 18:11:47 PST
This issue originally reported here on the Redmine project:
http://www.redmine.org/issues/4239
This is a REGRESSION, as the page renders properly in previous versions of Webkit. Good: 531.21.8 Safari 4.0.4 (6531.21.10) Bad: 532.7+ Webkit 4.0.4 (6531.21.10,
r52242
) (17 December 2009) Bad: 532.7 Chromium 4.0.270.0 (34467) I've attached a web archive example of the problem, and screenshots of Safari 4 and Webkit Daily.
Attachments
Web Archive of affected page
(323.31 KB, application/x-webarchive)
2009-12-17 18:12 PST
,
Josh
no flags
Details
Screenshot - Good Case - Safari 4
(235.00 KB, image/png)
2009-12-17 18:13 PST
,
Josh
no flags
Details
Screenshot - Bad Case - Webkit Daily Build
(217.66 KB, image/png)
2009-12-17 18:13 PST
,
Josh
no flags
Details
Only clear floats as necessary to fit the child on the line
(20.51 KB, patch)
2009-12-26 11:48 PST
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Josh
Comment 1
2009-12-17 18:12:21 PST
Created
attachment 45114
[details]
Web Archive of affected page
Josh
Comment 2
2009-12-17 18:13:02 PST
Created
attachment 45115
[details]
Screenshot - Good Case - Safari 4
Josh
Comment 3
2009-12-17 18:13:35 PST
Created
attachment 45116
[details]
Screenshot - Bad Case - Webkit Daily Build
Mark Rowe (bdash)
Comment 4
2009-12-17 21:16:11 PST
<
rdar://problem/7483622
>
mitz
Comment 5
2009-12-24 14:05:31 PST
This is similar to
bug 32382
, and I think the solution is to refine the fix for that bug and instead of using the float*Bottom() functions, find the bottom of the lowest float that limits the available space on the line.
mitz
Comment 6
2009-12-26 11:48:38 PST
Created
attachment 45514
[details]
Only clear floats as necessary to fit the child on the line
WebKit Review Bot
Comment 7
2009-12-26 11:53:29 PST
style-queue ran check-webkit-style on
attachment 45514
[details]
without any errors.
Sam Weinig
Comment 8
2009-12-26 17:25:46 PST
Comment on
attachment 45514
[details]
Only clear floats as necessary to fit the child on the line r=me
mitz
Comment 9
2009-12-26 17:29:19 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/52566
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug