REGRESSION (r47255): Extra Large Amount of Empty Space https://bugs.webkit.org/show_bug.cgi?id=32690

Reviewed by Sam Weinig.

WebCore:

Test: fast/block/float/clear-to-fit.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::getClearDelta): Only clear floats as needed to
fit the child on the line.

LayoutTests:

* fast/block/float/clear-to-fit-expected.checksum: Added.
* fast/block/float/clear-to-fit-expected.png: Added.
* fast/block/float/clear-to-fit-expected.txt: Added.
* fast/block/float/clear-to-fit.html: Added.



Canonical link: https://commits.webkit.org/43979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52566 268f45cc-cd09-0410-ab3c-d52691b4dbfc